<resources>
    <string name="app_name">WannaGO</string>
    <string name="prerun_text">Hey %s, \nWannaGO for a run ? \n\nReady… \n\nSet...</string>
    <string name="done">I\'m done</string>
    <string name="average_speed">Avg Speed</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="your_stats">Your Stats</string>
    <string name="max_speed">Max Speed</string>
    <string name="good_job">Good job %s !</string>
    <string name="i_can_do_better">I can do better !</string>
    <string name="change_runner">Change Runner</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="let_s_run">Let\'s Run !</string>
    <string name="starting_location">Start</string>
    <string name="ending_location">End</string>
    <string name="distance_made">%d m</string>
    <string name="speed_value">%1$.2f Km/h</string>
    <string name="elevation">Elevation</string>
</resources>
