<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context="khouvramany.wannago.LoginActiviy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

    <EditText
        android:id="@+id/iduser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:inputType=""
        android:hint="@string/id" />

    <EditText
        android:id="@+id/passworduser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/letsrun_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="connect"
        android:text="@string/let_s_run"/>

    </LinearLayout>
</RelativeLayout>
